# docs/swagger.json
@@ -109,6 +109,9 @@
                 "code": {
                     "type": "string",
                     "example": "SUCCESS"
+                },
+                "group": {
+                    "$ref": "#/definitions/groupControllerCommandDto.Group"
                 }
             }
         },
@@ -120,6 +123,17 @@
                     "type": "string"
                 },
                 "errorMessage": {
+                    "type": "string"
+                }
+            }
+        },
+        "groupControllerCommandDto.Group": {
+            "type": "object",
+            "properties": {
+                "title": {
+                    "type": "string"
+                },
+                "uuid": {
                     "type": "string"
                 }
             }
